syntax = "proto3";

package network;

import "google/protobuf/empty.proto";

option go_package = "github.com/maxpoletaev/kv/network/proto";

// enum Status {
//     Left = 0;
//     Alive = 1;
//     Suspect = 2;
//     Dead = 3;
// }

message Node {
    uint32 id = 1;
    string name = 2;
    string server_addr = 3;
    string gossip_addr = 4;
    // Status status = 5;
}

message JoinRequest {
    repeated Node local_nodes = 1;
}

message JoinResponse {
    repeated Node remote_nodes = 1;
}

message NodeList {
    repeated Node nodes = 1;
}

// message PingRequest {
//     uint32 node_id = 1;
// }

// message PingResponse {
//     uint32 duration_ms = 1;
// }

message NodeJoinedEvent {
    Node node = 1;
}

message NodeLeftEvent {
    uint32 node_id = 1;
}

// message NodeStatusEvent {
//     uint32 member_id = 1;
//     Status status = 2;
//     uint64 version = 3;
// }

message ClusterEvent {
    oneof event {
        NodeJoinedEvent joined = 1;
        NodeLeftEvent left = 2;
        // NodeStatusEvent status_changed = 3;
    }
}

service ClusterSerice {
    rpc Info(google.protobuf.Empty) returns (NodeList);
    rpc Join(JoinRequest) returns (JoinResponse);
    // rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
    // rpc PingIndirect(PingRequest) returns (PingResponse);
    // rpc ExcnageState(NodeList) returns (NodeList);
}
